logs/redis-bus-python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/redis_bus_python'...
Compiling './lib/python3.5/site-packages/redis_bus_python/redis_bus.py'...
***   File "./lib/python3.5/site-packages/redis_bus_python/redis_bus.py", line 358
    exceptions.append(`e`)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redis_bus_python/redis_lib'...
Listing './lib/python3.5/site-packages/redis_bus_python/test'...
Compiling './lib/python3.5/site-packages/redis_bus_python/test/test_oneshot_connection.py'...
***   File "./lib/python3.5/site-packages/redis_bus_python/test/test_oneshot_connection.py", line 125
    self.assertEqual([u'subscribe', u'tmp.20', 1L], parsed_resp)
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redis_bus_python-0.52.egg-info'...
Listing './lib/python3.5/site-packages/schoolbus_test_server'...
Compiling './lib/python3.5/site-packages/schoolbus_test_server/js_bus_bridge.py'...
***   File "./lib/python3.5/site-packages/schoolbus_test_server/js_bus_bridge.py", line 99
    from __builtin__ import True
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schoolbus_test_server/sbtester_app_server.py'...
***   File "./lib/python3.5/site-packages/schoolbus_test_server/sbtester_app_server.py", line 16
    from __builtin__ import True
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schoolbus_test_server/sbtester_content_server.py'...
***   File "./lib/python3.5/site-packages/schoolbus_test_server/sbtester_content_server.py", line 132
    print('Bombed out of tornado IO loop: %s' % `e`)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schoolbus_test_server/schoolbus_test_server.py'...
***   File "./lib/python3.5/site-packages/schoolbus_test_server/schoolbus_test_server.py", line 865
    print("Error while shutting down message streamer thread: '%s'" % `e`)
                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sentinels'...
Listing './lib/python3.5/site-packages/sentinels-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
